--- a/packages/amis-ui/scss/components/_menu.scss
+++ b/packages/amis-ui/scss/components/_menu.scss
@@ -162,6 +162,7 @@
       display: none;
     }
   }
+
   &-panel {
     &-wrapper {
       display: flex;
@@ -173,13 +174,23 @@
       display: flex;
       align-items: center;
       color: var(--Menu-light-fontColor);
+      font-size: var(--Nav-item-fontSize);
 
       &:hover {
         color: var(--Menu-light-fontColor-onHover);
       }
+      
+      &__icon-wrapper {
+        width: var(--Tabs-linkFontSize);
+        height: var(--Tabs-linkFontSize);
+        line-height: var(--Tabs-linkFontSize);
+        margin-right: 8px;
+      }
 
       &__icon {
-        margin-right: 8px;
+        fill: currentColor;
+        width: 100%;
+        height: 100%;
       }
 
       &__label {
@@ -382,6 +393,7 @@
   &-vertical.#{$ns}Nav-Menu-sub {
     min-width: px2rem(160px);
   }
+  
 
   &-item,
   &-submenu-title {
