--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -209,6 +209,11 @@
 .Img-container{
   position: relative;
 
+  img{
+    transition: all ease-in-out .3s;
+
+  }
+
   .mask{
     width: 100%;
     height: 100%;
@@ -216,20 +221,330 @@
     top: 0;
     left: 0;
     cursor: pointer;
-    transition: all ease-in-out .3s;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: transparent;
+    opacity: 0;
     font-weight: bold;
     font-size: px2rem(15px);
-  }
-
-  .mask:hover{
-    background: rgba(0,0,0,.5);
-    color: white;
+    background-color: rgb(44, 63, 82);
+    color: #fff;
+    transition: all ease-in-out .3s;
   }
 }
+
+.hover-slide:hover{
+  .mask{
+    opacity: 1;
+    transform: translate(5%, 5%);
+  }
+}
+
+.pull-top{
+  .mask{
+    opacity: 1;
+  }
+  img{
+    position: absolute;
+  }
+  &:hover img{
+    transform: translateY(-60%);
+  }
+}
+
+.scale-center{
+  .mask{
+    scale: 0.5;
+
+    span{
+      position: absolute;
+      top: 5%;
+      left: 5%;
+    }
+  }
+
+  &:hover .mask{
+    transform: scale(2);
+    opacity: 1;
+  }
+
+  &:hover img{
+    transform: scale(0.5);
+  }
+}
+
+.scale-top{
+  img{
+    position: absolute;
+  }
+  .mask {
+    opacity: 1;
+    span{
+      position: absolute;
+      bottom: 5%;
+      left: 5%;
+    }
+  }
+  &:hover img{
+    transform: translateY(-50%) scale(0.5);
+  }
+}
+
+.text-style-1{
+  overflow: hidden;
+  .mask{
+    z-index: 1;
+    opacity: 1;
+    background: rgba(48, 133, 163, 0.4);
+    span{
+      position: absolute;
+      left: 5%;
+      bottom: 5%;
+      transition: all ease-in-out .3s;
+    }
+  }
+  img{
+    scale: 1.2;
+    transform: translateX(-5%);
+  }
+  &:hover .mask{
+    background: rgba(48, 133, 163, 0);
+    span{
+      transform: translateY(-200%);
+    }
+  }
+  &:hover img{
+    transform: translateX(5%);
+  }
+}
+
+.text-style-2{
+  .mask{
+    opacity: 1;
+    background: transparent;
+    span{
+      z-index: 1;
+      transition: all ease-in-out .3s;
+    }
+  }
+  .mask::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0, rgba(72, 76, 97, .8) 75%);
+    transition: all ease-in-out .3s;
+  }
+  &:hover .mask::before{
+    height: 100%;
+  }
+  &:hover .mask span{
+    transform: translateY(-200%);
+  }
+}
+
+.text-style-3{
+  overflow: hidden;
+  .mask{
+    z-index: 1;
+    opacity: 1;
+    background: transparent;
+    span{
+      position: absolute;
+      top: 10%;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  img{
+    scale: 1.2;
+    transition: all 0.3s ease-in-out;
+  }
+  .mask::before,
+  .mask::after{
+    content: "";
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: 15%;
+    right: 15%;
+    transition: all 0.3s ease-in-out;
+    color: rgba(255, 255, 255, 0.7);
+    opacity: 0;
+  }
+  .mask::before{
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+    transform: scaleX(0); /* 初始状态：水平方向缩放为0 */
+    transform-origin: left; /* 设置变换的原点为左侧 */
+  }
+  .mask::after {
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
+    transform: scaleY(0); /* 初始状态：垂直方向缩放为0 */
+    transform-origin: top; /* 设置变换的原点为顶部 */
+  }
+  &:hover .mask::before{
+    opacity: 1;
+    transform: scaleX(1.2) translateX(-10%); /* 鼠标悬停时：水平方向缩放为1 */
+  }
+  &:hover .mask::after{
+    opacity: 1;
+    transform: scaleY(1.2) translateY(-10%); /* 鼠标悬停时：垂直方向缩放为1 */
+  }
+  &:hover .mask{
+    background: rgba(48, 133, 163, 0.4);
+    span{
+      top: 20%;
+    }
+  }
+  &:hover img{
+    transform: translateY(10%);
+  }
+}
+
+.text-style-4{
+  .mask{
+    background: #fff;
+    opacity: 1;
+    left: 0;
+    bottom: 0;
+    top: auto;
+    height: 0!important;
+    transform-origin: bottom;
+    color: #0b0a22;
+    span{
+      display: none;
+    }
+  }
+
+  &:hover .mask{
+    height: 40%!important;
+    span{
+      display: block;
+    }
+  }
+}
+
+.text-style-5{
+  .mask{
+    opacity: 1;
+    background: rgba(48, 133, 163, 0);
+    span{
+      position: relative;
+      bottom: -10%;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  .mask::before{
+    content: "";
+    border: 1px solid #ffffff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0;
+    height: 0;
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+  }
+  &:hover .mask::before{
+    width: 90%;
+    height: 90%;
+    opacity: 1;
+  }
+
+  &:hover .mask{
+    background: rgba(48, 133, 163, 0.4);
+    span{
+      bottom: 10%;
+    }
+  }
+}
+
+.text-style-6{
+  .mask{
+    opacity: 1;
+    background: rgba(48, 133, 163, 0.4);
+    span{
+      position: relative;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  .mask::before,
+  .mask::after{
+    content: "";
+    position: absolute;
+    top: 20px;
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
+    transition: all 0.3s ease-in-out;
+    color: rgba(255, 255, 255, 0.7);
+    opacity: 0;
+  }
+  .mask::before{
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+    transform: scaleX(0); /* 初始状态：水平方向缩放为0 */
+  }
+  .mask::after {
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
+    transform: scaleY(0); /* 初始状态：垂直方向缩放为0 */
+  }
+  &:hover .mask::before{
+    opacity: 1;
+    transform: scaleX(1); /* 鼠标悬停时：水平方向缩放为1 */
+  }
+  &:hover .mask::after{
+    opacity: 1;
+    transform: scaleY(1); /* 鼠标悬停时：垂直方向缩放为1 */
+  }
+  &:hover .mask{
+    background: rgba(48, 133, 163, 0);
+    span{
+      transform: translateY(200%);
+    }
+  }
+}
+
+.text-style-7{
+  .mask{
+    opacity: 1;
+    background: rgba(48, 133, 163, 0);
+    span{
+      position: absolute;
+      top: 10%;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  .mask::before,
+  .mask::after{
+    content: "";
+    width: 80%;
+    height: 1px;
+    background: #ffffff;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+  }
+  &:hover .mask{
+    background: rgba(48, 133, 163, 0.4);
+    span{
+      transform: translateY(100%);
+    }
+  }
+  &:hover .mask::before{
+    transform: rotateZ(45deg);
+  }
+  &:hover .mask::after{
+    transform: rotateZ(-45deg);
+  }
+}
+
 
 .enlarge-container{
   position: fixed;
